Changes of writings.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="root"></div>
     <script type="text/babel">
         const person = {
-            firstName: 'Viivi',
+            firstName: 'Viivi Maria',
             lastName: 'Saarikko'
         };
 
